--- a/example.html
+++ b/example.html
@@ -9,12 +9,21 @@
  
         body { background-color: white; margin: 0; padding: 0; font-family: sans-serif; font-size: 12px; }
         p { margin-bottom: 10px; }
+        #select_canvas {
+            display: none;
+            z-index: 9999;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+        }
  
     </style>
  
 </head>
  
 <body>
+    <!-- <button id="start_select">Start selecting region</button>
+    <canvas id="select_canvas" width="800" height="800"></canvas> -->
     <ul>
         <h1><a href="">Link 1</a></h1>
         <h1><a href="">Link 2</a></h1>
@@ -25,6 +34,7 @@
 </body>
  
 <!-- JavaScript -->
+<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="highlight.js"></script>
 
 </html>
