--- a/example.html
+++ b/example.html
@@ -25,11 +25,12 @@
     <!-- <button id="start_select">Start selecting region</button>
     <canvas id="select_canvas" width="800" height="800"></canvas> -->
     <ul>
-        <h1><a href="">Link 1</a></h1>
+        <h1><a href="https://www.google.com/search?q=beans">Link 1</a></h1>
         <h1><a href="">Link 2</a></h1>
         <h1><a href="">Link 3</a></h1>
         <h1><a href="">Link 4</a></h1>
         <h1><a href="">Link 5</a></h1>
+        <h1><a href="">Loooooooooooooooooooooooooooooooooooong link</a></h1>
     </ul>
 </body>
  
