popup activate on button click, mild restructuring

--- a/example.html
+++ b/example.html
@@ -26,7 +26,7 @@
 </body>
  
 <!-- JavaScript -->
-<script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="external/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="highlight.js"></script>
 
 </html>
