minor code edit

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
     <head>
         <title>LynkIt popup</title>
     </head>
+    <!-- CSS -->
     <link rel="stylesheet" href="external/materialize.min.css">
     <style type="text/css">
 	body {
@@ -13,7 +14,7 @@
         font-size: 40px;
     }
     </style>
-
+    <!-- body -->
     <body>
         <h1>LynkIt</h1>
         
@@ -29,6 +30,7 @@
         </label>
 
     </body>
+    <!-- Javascript -->
     <script src="external/jquery-3.4.1.min.js"></script>
     <script src="popup.js"></script>
 </html>
