added popup padding

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="external/materialize.min.css">
     <style type="text/css">
 	body {
-        margin: 5px;
+        padding-bottom: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
         text-align: center;
     }
     font{
