--- a/popup.html
+++ b/popup.html
@@ -5,37 +5,29 @@
     </head>
     <!-- CSS -->
     <link rel="stylesheet" href="external/materialize.min.css">
-    <style type="text/css">
-	body {
-        padding-bottom: 15px;
-        padding-left: 15px;
-        padding-right: 15px;
-        text-align: center;
-    }
-    font{
-        font-size: 40px;
-    }
-    #container {
-        margin: 10px auto;
-        width: 520px;
-        height: 395px;
-        border: 10px #333 solid;
-    }
-    #videoElement {
-        width: 500px;
-        height: 375px;
-        background-color: #666;
-    }
+    <link rel="stylesheet" href="popupStyle.css">
 
-    </style>
     <!-- body -->
     <body>
         <h1>LynkIt</h1>
         <div id="container">
-            <video autoplay="true" id="videoElement">	
+            <video id="videoElement" width="400" height="300" preload="auto" loop playsinline autoplay>
             </video>
+            <canvas id="overlay" width="400" height="300"></canvas>
+        </div>
+        <br/>
+        <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
+        <br/>
+        <br/>
+        <!-- <div id="container">
+            <video id="videoElement" preload="auto" loop playsinline autoplay>	
+            </video>
+            <canvas id="overlay"></canvas>
         </div>
         
+        <input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick = "startVideo()"id="startbutton"/>
+        <br> -->
+
         <label for="keyboard" id = "radioButtons">
             <input type="radio" name="selectionMechanism" id="keyboard"  value="keyboard">
             <span><font>Keyboard</font></span>
@@ -50,5 +42,7 @@
     </body>
     <!-- Javascript -->
     <script src="external/jquery-3.4.1.min.js"></script>
+    <script src="external/clmtrackr.js"></script>
+    <script src="external/utils.js"></script>
     <script src="popup.js"></script>
 </html>
