--- a/popup.html
+++ b/popup.html
@@ -13,20 +13,13 @@
         <div id="container">
             <video id="videoElement" width="400" height="300" preload="auto" loop playsinline autoplay>
             </video>
-            <canvas id="overlay" width="400" height="300"></canvas>
+            <canvas id="trackerCanvas" width="400" height="300"></canvas>
+            <canvas id="eyeCanvas" width=80 height=60></canvas>
         </div>
         <br/>
         <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
         <br/>
         <br/>
-        <!-- <div id="container">
-            <video id="videoElement" preload="auto" loop playsinline autoplay>	
-            </video>
-            <canvas id="overlay"></canvas>
-        </div>
-        
-        <input class="btn" type="button" value="wait, loading video" disabled="disabled" onclick = "startVideo()"id="startbutton"/>
-        <br> -->
 
         <label for="keyboard" id = "radioButtons">
             <input type="radio" name="selectionMechanism" id="keyboard"  value="keyboard">
