added greyscaling of eye region

--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,7 @@
             </video>
             <canvas id="trackerCanvas" width="400" height="300"></canvas>
             <canvas id="eyeCanvas" width=80 height=60></canvas>
+            <canvas id="bwCanvas" width=80 height=60></canvas>
         </div>
         <br/>
         <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
@@ -37,5 +38,6 @@
     <script src="external/jquery-3.4.1.min.js"></script>
     <script src="external/clmtrackr.js"></script>
     <script src="external/utils.js"></script>
+    <script src="external/canvasfilters.js"></script>
     <script src="popup.js"></script>
 </html>
