added thresholding and th.canvas

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
             <canvas id="trackerCanvas" width="400" height="300"></canvas>
             <canvas id="eyeCanvas" width=80 height=60></canvas>
             <canvas id="bwCanvas" width=80 height=60></canvas>
+            <canvas id="thCanvas" width=80 height=60></canvas>
         </div>
         <br/>
         <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
