old and new eye track

--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,9 @@
             <canvas id="eyeCanvas" width=80 height=60></canvas>
             <canvas id="bwCanvas" width=80 height=60></canvas>
             <canvas id="thCanvas" width=80 height=60></canvas>
+            <br />
+            <canvas id="oldCanvas" width=80 height=60></canvas>
+            <canvas id="curCanvas" width=80 height=60></canvas>
         </div>
         <br/>
         <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
