correlation, adjust minCorrelation for it to work

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,23 @@
             <br />
             <canvas id="oldCanvas" width=80 height=60></canvas>
             <canvas id="curCanvas" width=80 height=60></canvas>
+            <canvas id="cCanvas" width=80 height=60></canvas>
+            <br />
+            <p id="correlationPercentage">
+                0%
+            </p>
+            <p id="blinksDetected">
+                0
+            </p>
         </div>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
         <br/>
         <input class="btn" type="button" value="wait, loading video" disabled="disabled" id="startbutton"/>
         <br/>
