--- a/html/popup.html
+++ b/html/popup.html
@@ -4,8 +4,8 @@
         <title>LynkIt popup</title>
     </head>
     <!-- CSS -->
-    <link rel="stylesheet" href="external/materialize.min.css">
-    <link rel="stylesheet" href="popupStyle.css">
+    <link rel="stylesheet" href="../external/materialize.min.css">
+    <link rel="stylesheet" href="../css/popupStyle.css">
 
     <!-- body -->
     <body>
@@ -20,5 +20,5 @@
     </body>
     <!-- Javascript -->
     <script src="external/jquery-3.4.1.min.js"></script>
-    <script src="popup.js"></script>
+    <script src="../js/popup.js"></script>
 </html>
