reordering path changes

--- a/html/popup.html
+++ b/html/popup.html
@@ -19,6 +19,6 @@
 
     </body>
     <!-- Javascript -->
-    <script src="external/jquery-3.4.1.min.js"></script>
+    <script src="../external/jquery-3.4.1.min.js"></script>
     <script src="../js/popup.js"></script>
 </html>
