added highlighter into content script, added persistence across tabs

--- a/html/popup.html
+++ b/html/popup.html
@@ -10,12 +10,14 @@
     <!-- body -->
     <body>
         <h1>LynkIt enabled!</h1>
+        <input class="btn" type="button" value="Click to disable"  id="disablebutton"/>
         <h5>Using input mechanism:</h2>
-        <br>
-        <label for="keyboard" id = "radioButtons">
-            <input type="radio" name="selectionMechanism" id="keyboard" checked="checked" value="keyboard">
-            <span><font>Keyboard</font></span>
-        </label>
+            <br>
+            <label for="keyboard" id = "radioButtons">
+                <input type="radio" name="selectionMechanism" id="keyboard" value="keyboard">
+                <span><font>Keyboard</font></span>
+            </label>
+        <h6>Click on a number on your keyboard to navigate to the link</h6>
 
     </body>
     <!-- Javascript -->
