added toggling of disable button

--- a/html/popup.html
+++ b/html/popup.html
@@ -10,7 +10,9 @@
     <!-- body -->
     <body>
         <h1>LynkIt enabled!</h1>
-        <input class="btn" type="button" value="Click to disable"  id="disablebutton"/>
+        <div>
+            <input class="btn" type="button" value="Click to disable"  id="disablebutton"/>
+        </div>
         <h5>Using input mechanism:</h2>
             <br>
             <label for="keyboard" id = "radioButtons">
