--- a/html/popup.html
+++ b/html/popup.html
@@ -9,11 +9,11 @@
 
     <!-- body -->
     <body>
-        <h1>LynkIt enabled!</h1>
+        <h1 id = "extensionTitle">LynkIt disabled</h1>
         <div>
             <input class="btn" type="button" value="Click to disable"  id="disablebutton"/>
         </div>
-        <h5>Using input mechanism:</h2>
+        <h5 id = "selectPrompt">Using input mechanism:</h2>
             <br>
             <label for="keyboard" id = "radioButtons">
                 <input type="radio" name="selectionMechanism" id="keyboard" value="keyboard">
